--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ Last Updated
 </dt>
 <dd>
 <p>
-  2016-01-08
+  2016-01-23
 </p>
 </dd>
 </dl></div>
@@ -818,7 +818,7 @@ Provide a standard format for representor programmers to convert internal servic
 <div class="paragraph"><p>The <code>WeSTL</code> document MUST be a valid JSON document per <a href="#RFC4627">[RFC4627]</a>. A <code>WeSTL</code> document has a very simple format. However, it is also easily extended to fit a local Web service implementor&#8217;s needs. Below is a top-down survey of the <code>WeSTL</code> document model.</p></div>
 <div class="sect2">
 <h3 id="_the_code_wstl_code_object">The <code>wstl</code> Object</h3>
-<div class="paragraph"><p>The <code>wstl</code> object is the root object of every <code>WeSTL</code> document. It has a few child properties and MAY be extended with custom properties.</p></div>
+<div class="paragraph"><p>The <code>wstl</code> object is the root object of every <code>WeSTL</code> document. It has a small set of child properties and MAY be extended with custom properties.</p></div>
 <div class="sect3">
 <h4 id="_quick_view">Quick View</h4>
 <div class="paragraph"><p>The <code>wstl</code> object looks like this:</p></div>
@@ -829,7 +829,8 @@ Provide a standard format for representor programmers to convert internal servic
     "title" : "...",
     "actions" : [],
     "content" : {},
-    "data" ; []
+    "data" : [],
+    "related" : {}
   }
 }</code></pre>
 </div></div>
@@ -868,6 +869,14 @@ Provide a standard format for representor programmers to convert internal servic
 <dd>
 <p>
  A RECOMMENDED child property of the <code>wstl</code> element. If it exists, it MUST be an array of JSON objects that represent the data associated with the runtime request. The <code>data</code> element is an <em>open</em> format and MAY contain any other valid JSON content.
+</p>
+</dd>
+<dt class="hdlist1">
+<code>related</code>
+</dt>
+<dd>
+<p>
+ An OPTIONAL child property of the <code>wstl</code> element. If it exists, it MUST be an object populated by one or more named arrays (see below).
 </p>
 </dd>
 <dt class="hdlist1">
@@ -1019,10 +1028,32 @@ Provide a standard format for representor programmers to convert internal servic
 </div>
 </div>
 <div class="sect2">
+<h3 id="_the_code_related_code_object">The <code>related</code> Object</h3>
+<div class="paragraph"><p>The <code>related</code> object contains a set of one or more named arrays. Each array is a list of anonymous objects that represent shared, related data for this document. The lists in the <code>related</code> object are used by the <code>suggest</code> processing when rendering input options (see below).</p></div>
+<div class="sect3">
+<h4 id="_quick_view_4">Quick View</h4>
+<div class="paragraph"><p>Here is a quick view of the <code>related</code> object.</p></div>
+<div class="listingblock">
+<div class="content">
+<pre><code>"related" : {
+  "NAME" : []
+}</code></pre>
+</div></div>
+<div class="paragraph"><p>The <code>"NAME"</code> in the above example is set to a specific value in document. For example, if the list contained a set of users, <code>related</code> object might look like this:</p></div>
+<div class="listingblock">
+<div class="content">
+<pre><code>"related" : {
+  "userList" : []
+}</code></pre>
+</div></div>
+<div class="paragraph"><p>The value of each array is an <em>open</em> format and MAY contain any other valid JSON content.</p></div>
+</div>
+</div>
+<div class="sect2">
 <h3 id="_the_code_input_code_object">The <code>input</code> Object</h3>
 <div class="paragraph"><p>The <code>input</code> object is an anonymous JSON object that contains meta-data information about each input argument for a state stransition. This object contains a number of properties. The only one that is REQUIRED is the <code>name</code> property. All others are OPTIONAL.</p></div>
 <div class="sect3">
-<h4 id="_quick_view_4">Quick View</h4>
+<h4 id="_quick_view_5">Quick View</h4>
 <div class="paragraph"><p>Here is a quick view of the <code>input</code> object.</p></div>
 <div class="listingblock">
 <div class="content">
@@ -1032,7 +1063,9 @@ Provide a standard format for representor programmers to convert internal servic
   "value" : "",
   "readOnly" : true|false,
   "required" : true|false,
-  "pattern" : ""
+  "pattern" : "",
+  "type" : "textarea"|"select",
+  "suggest" : []|{}
 }</code></pre>
 </div></div>
 </div>
@@ -1088,6 +1121,88 @@ Provide a standard format for representor programmers to convert internal servic
  A regex value to be used as an input validator at runtime. If it exists, its value MUST comply with the <a href="#htmlPattern">[HTMLPattern]</a> specification.
 </p>
 </dd>
+<dt class="hdlist1">
+<code>type</code>
+</dt>
+<dd>
+<p>
+ An OPTIONAL property indicating the display type used when rendering the input. Valid values are <code>textarea</code> (render as a multiline input) and <code>select</code> (render as a list of input options). If this property is missing or set of an unknown value, the input SHOULD be rendered as a simple text input.
+</p>
+</dd>
+<dt class="hdlist1">
+<code>suggest</code>
+</dt>
+<dd>
+<p>
+ An OPTIONAL property indicated the values to use when rendering a <code>select</code>-type input of options. The <code>suggest</code> object somes in two forms: 1) an array of values (see Suggest Arrays) or 2) a reference to <code>related</code> data (see Suggest Related Data). It is up to the rendering engine to decide how to handle each form of <code>suggest</code> information&#8201;&#8212;&#8201;including ignoring it completely.
+</p>
+</dd>
+</dl></div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_suggest_arrays">Suggest Arrays</h3>
+<div class="paragraph"><p>The <code>suggest</code> array is an OPTIONAL collection of anonyous name-value pair objects for use when rendering a <code>select</code>-type input of options.</p></div>
+<div class="sect3">
+<h4 id="_quick_view_6">Quick View</h4>
+<div class="paragraph"><p>Here is a quick view of the <code>suggest</code> array object.</p></div>
+<div class="listingblock">
+<div class="content">
+<pre><code>"suggest" : [
+  {"value" : "S", "text" : "Small"},
+  {"value" : "M", "text" : "Medium"},
+  {"value" : "L", "text" : "Large"}
+]</code></pre>
+</div></div>
+</div>
+<div class="sect3">
+<h4 id="_details_5">Details</h4>
+<div class="paragraph"><p>The <code>suggest</code> array contains one or more anonymous name-value pair objects. Rendering engines SHOULD be prepared for only <em>one</em> of the properties (<code>value</code> or <code>text</code>) to appear at runtime. When this happens, the value of the existing property SHOULD be used for <em>both</em> properties. For example, if only a set of <code>value</code> properties are supplied, the rendering engine SHOULD assume the missing <code>text</code> property is set to the same value as the <code>value</code> property.</p></div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_suggest_related_data">Suggest Related Data</h3>
+<div class="paragraph"><p>The <code>suggest</code> related data object is an OPTIONAL object with three properties for use when rendering a <code>select</code>-type input of options. The properties (<code>related</code>, <code>value</code>, and <code>text</code>) are used to lookup data in the <code>related</code> section of the document and render as input options.</p></div>
+<div class="sect3">
+<h4 id="_quick_view_7">Quick View</h4>
+<div class="paragraph"><p>Here is a quick view of the <code>suggest</code> related data object.</p></div>
+<div class="listingblock">
+<div class="content">
+<pre><code>"suggest" : {
+  "related" : "userList",
+  "value" : "id",
+  "text" : "userName"
+}</code></pre>
+</div></div>
+</div>
+<div class="sect3">
+<h4 id="_details_6">Details</h4>
+<div class="paragraph"><p>The <code>suggest</code> related data object is an OPTIONAL object with three properties for use when rendering a <code>select</code>-type input of options.</p></div>
+<div class="dlist"><dl>
+<dt class="hdlist1">
+<code>related</code>
+</dt>
+<dd>
+<p>
+ The value of <code>related</code> is the name of a list in the <code>related</code> section of the document. This is a REQUIRED property. If this property is missing or set to a value that does not match a named list in the <code>related</code> section of the document, then this <code>suggest</code> object SHOULD be ingored.
+</p>
+</dd>
+<dt class="hdlist1">
+<code>value</code>
+</dt>
+<dd>
+<p>
+ This contains the <em>property-name</em> of the items in the list pointed to by the <code>related</code> property. This is a REQUIRED property. This will be used as the <em>selected value</em> when rendering input options. If this property is missing or set to a value that does not match a property name in the <code>related</code> section list, then this <code>suggest</code> object SHOULD be ingored.
+</p>
+</dd>
+<dt class="hdlist1">
+<code>text</code>
+</dt>
+<dd>
+<p>
+ This contains the <em>property-name</em> of the items in the list pointed to by the <code>related</code> property. This is a REQUIRED property. This will be used as the <em>display value</em> when rendering input options. If this property is missing or set to a value that does not match a property name in the <code>related</code> section list, then this <code>suggest</code> object SHOULD be ingored.
+</p>
+</dd>
 </dl></div>
 </div>
 </div>
@@ -1137,6 +1252,13 @@ Provide a standard format for representor programmers to convert internal servic
             "prompt": "Search Text",
             "value": "",
             "required" : true
+          },
+          {
+            "name": "external",
+            "prompt": "External Search?",
+            "value": "",
+            "required: true,
+            "suggest": [{"value":"true"},{"value":"false"}]
           }
         }
       }
@@ -1194,6 +1316,13 @@ The one that leads to the search results (<code>searchForm</code>)
             "prompt": "Search Text",
             "value": "Danny",
             "required" : true
+          },
+          {
+            "name": "external",
+            "prompt": "External Search?",
+            "value": "",
+            "required: true,
+            "suggest": [{"value":"true"},{"value":"false"}]
           }
         }
       }
@@ -1323,7 +1452,7 @@ Iralki Nadareishvili.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-01-08 22:05:38 EST
+Last updated 2016-01-23 22:23:44 EST
 </div>
 </div>
 </body>
