--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@ Provide a standard format for representor programmers to convert internal servic
 </dt>
 <dd>
 <p>
-  Contains and array of link relation values for the transition. This value MUST comply with the rules of <a href="#rfc5988">[RFC5988]</a>
+  Contains an array of link relation values for the transition. This value MUST comply with the rules of <a href="#rfc5988">[RFC5988]</a>
 </p>
 </dd>
 <dt class="hdlist1">
