--- a/index.html
+++ b/index.html
@@ -797,6 +797,68 @@ Provide a standard format for representor programmers to convert internal servic
 </ol></div>
 </div>
 <div class="sect2">
+<h3 id="_sample_document">Sample Document</h3>
+<div class="paragraph"><p>Below is a sample <code>WeSTL</code> document (in its <strong>runtime</strong> mode). It contains a list of all the _appropriate state transitions for a running Web service in a specific state.</p></div>
+<div class="listingblock">
+<div class="content">
+<pre><code>{
+  "wstl": {
+    "actions": [
+      {
+        "name": "homeLink",
+        "description" : "View the home page",
+        "type": "safe",
+        "action": "read",
+        "kind": "",
+        "target": "list menu",
+        "prompt": "Home",
+      },
+      {
+        "name": "searchForm",
+        "description" : "Search for content",
+        "type": "safe",
+        "action": "read",
+        "kind": "search",
+        "target": "list form",
+        "prompt": "Search",
+        "inputs": [
+          {
+            "name": "text",
+            "prompt": "Search Text",
+            "value": "Danny",
+            "required" : true
+          },
+          {
+            "name": "external",
+            "prompt": "External Search?",
+            "value": "",
+            "required: true,
+            "suggest": [{"value":"true"},{"value":"false"}]
+          }
+        }
+      }
+    ],
+    "data": [
+      {
+        "id": "1a14qx7qc81",
+        "title": "Danny Boy"
+      },
+      {
+        "id": "1q2w3e43r",
+        "title": "Danny Tremane"
+      },
+      {
+        "id": "azsxdcfvgb",
+        "title": "Danny Two-Shoes"
+      },
+
+    ]
+  }
+}</code></pre>
+</div></div>
+<div class="paragraph"><p>See the <a href="#sample-documents">Sample WeSTL Documents</a> section for details on this and other <code>WeSTL</code> examples.</p></div>
+</div>
+<div class="sect2">
 <h3 id="_compliance">Compliance</h3>
 <div class="paragraph"><p>An implementation is not compliant if it fails to satisfy one or more of the MUST or REQUIRED elements. An implementation that satisfies all the MUST and REQUIRED elements as well as all the SHOULD and RECOMMENDED elements is said to be "unconditionally compliant"; one that satisfies all the MUST and REQUIRED elements but not all the SHOULD and RECOMMENDED elements is said to be "conditionally compliant."</p></div>
 <div class="admonitionblock">
@@ -809,6 +871,10 @@ Provide a standard format for representor programmers to convert internal servic
 </td>
 </tr></table>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_media_type_identifier">Media Type Identifier</h3>
+<div class="paragraph"><p>The <code>WeSTL</code> document format is primarily designed to be used as an <em>internal</em> message model for aiding in the sharing of Web-like transition information and related data. However, it is possible to expose <code>WeSTL</code> documents directly on the Web. For cases where the <code>WeSTL</code> document will be sent as a document over the WWW, the proper media type identifier string to use is:+application/prs.wstl+json+. This value SHOULD be used by the client application when requesting a <code>WeSTL</code> document and SHOULD be used by the server when responding with a <code>WeSTL</code> document.</p></div>
 </div>
 </div>
 </div>
@@ -1102,7 +1168,7 @@ Provide a standard format for representor programmers to convert internal servic
 </dt>
 <dd>
 <p>
- A flag to indicate this value is to be rendered as <em>read-only</em> at runtime. If it exists, its value MUST be set to <code>true</code> or <code>false</code>
+ A flag to indicate this value is to be rendered as <em>read-only</em> at runtime. If it exists, its value MUST be set to <code>true</code> or <code>false</code>. If this property is missing or is set to an unknown value, it SHOULD be treated as if it is set to <code>false</code>.
 </p>
 </dd>
 <dt class="hdlist1">
@@ -1110,7 +1176,7 @@ Provide a standard format for representor programmers to convert internal servic
 </dt>
 <dd>
 <p>
- A flag to indicate this value is an required input. If it exists, its value MUST be set to <code>true</code> or <code>false</code>
+ A flag to indicate this value is an required input. If it exists, its value MUST be set to <code>true</code> or <code>false</code>. If this property is missing or is set to ann unknown value, it SHOULD be treated as if it is set to <code>false</code>.
 </p>
 </dd>
 <dt class="hdlist1">
@@ -1126,7 +1192,7 @@ Provide a standard format for representor programmers to convert internal servic
 </dt>
 <dd>
 <p>
- An OPTIONAL property indicating the display type used when rendering the input. Valid values are <code>textarea</code> (render as a multiline input) and <code>select</code> (render as a list of input options). If this property is missing or set of an unknown value, the input SHOULD be rendered as a simple text input.
+ An OPTIONAL property indicating the display type used when rendering the input. Valid values are <code>textarea</code> (render as a multiline input) and <code>select</code> (render as a list of input options). If this property is missing or set of an unknown value, the input SHOULD be rendered as a simple text input (e.g. <code>type="text"</code>).
 </p>
 </dd>
 <dt class="hdlist1">
@@ -1209,7 +1275,7 @@ Provide a standard format for representor programmers to convert internal servic
 </div>
 </div>
 <div class="sect1">
-<h2 id="_sample_code_westl_code_documents">Sample <code>WeSTL</code> Documents</h2>
+<h2 id="sample-documents">Sample <code>WeSTL</code> Documents</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>Below are sample <code>WeSTL</code> documents for reference.</p></div>
 <div class="sect2">
@@ -1445,6 +1511,7 @@ You MAY add new properties and objects as long as they do not cause existing com
 encouraged, and gave feedback to this specification,
 especially
 Ronnie Mitra,
+Stephen Mizell,
 Iralki Nadareishvili.</p></div>
 </div>
 </div>
@@ -1452,7 +1519,7 @@ Iralki Nadareishvili.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-12-26 19:50:40 EST
+Last updated 2016-12-26 20:12:33 EST
 </div>
 </div>
 </body>
