fix up media type section

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ Last Updated
 </dt>
 <dd>
 <p>
-  2016-12-26
+  2016-12-27
 </p>
 </dd>
 </dl></div>
@@ -874,7 +874,8 @@ Provide a standard format for representor programmers to convert internal servic
 </div>
 <div class="sect2">
 <h3 id="_media_type_identifier">Media Type Identifier</h3>
-<div class="paragraph"><p>The <code>WeSTL</code> document format is primarily designed to be used as an <em>internal</em> message model for aiding in the sharing of Web-like transition information and related data. However, it is possible to expose <code>WeSTL</code> documents directly on the Web. For cases where the <code>WeSTL</code> document will be sent as a document over the WWW, the proper media type identifier string to use is:+application/prs.wstl+json+. This value SHOULD be used by the client application when requesting a <code>WeSTL</code> document and SHOULD be used by the server when responding with a <code>WeSTL</code> document.</p></div>
+<div class="paragraph"><p>The <code>WeSTL</code> document format is primarily designed to be used as an <em>internal</em> message model for aiding in the sharing of Web-like transition information and related data. However, it is possible to expose <code>WeSTL</code> documents directly on the Web.</p></div>
+<div class="paragraph"><p>For cases where the <code>WeSTL</code> document will be sent as a document over the WWW, the proper media type identifier string to use is:+application/prs.wstl+json+. This value SHOULD be used by the client application when requesting a <code>WeSTL</code> document and SHOULD be used by the server when responding with a <code>WeSTL</code> document.</p></div>
 </div>
 </div>
 </div>
@@ -1519,7 +1520,7 @@ Iralki Nadareishvili.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-12-26 20:12:33 EST
+Last updated 2016-12-27 11:33:43 EST
 </div>
 </div>
 </body>
