--- a/index.html
+++ b/index.html
@@ -763,6 +763,22 @@ Status
 </dl></div>
 <div class="dlist"><dl>
 <dt class="hdlist1">
+Proposed IANA Registrations
+</dt>
+<dd>
+<p>
+  <code>application/prs.wstl+json</code>
+</p>
+</dd>
+<dt class="hdlist1">
+Repository
+</dt>
+<dd>
+<p>
+  <a href="https://github.com/RWCBook/wstl-spec">https://github.com/RWCBook/wstl-spec</a>
+</p>
+</dd>
+<dt class="hdlist1">
 Last Updated
 </dt>
 <dd>
@@ -776,13 +792,13 @@ Last Updated
 <div class="sect1">
 <h2 id="_general">General</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>This document contains the specifications for the <code>WeSTL</code> format used in the book <em>RESTful Web Clients</em> <a href="#rwcbook">[RWCBook]</a> by Mike Amundsen. This format is used to drive the server-side representor pattern. The <code>WeSTL</code> format exists in two different &#8216;states&#8217;. In its <strong>design-time</strong> state, it contains the list of all possible state transitions for a Web service. In its <strong>runtime</strong> state, it contains the list of the <em>selected</em> transitions for the current resource along with any data assocaited with that resource. The <strong>design-time</strong> document can be used to define all possible transitions including possible arugments for querying or writing data. The <strong>runtime</strong> document can be passed to a module that can turn the <code>WeSTL</code> document into a <em>representation</em> format (e.g. HTML, Collection+JSON, HAL, etc.).</p></div>
+<div class="paragraph"><p>This document contains the specifications for the <strong>WeSTL</strong> format used in the book <em>RESTful Web Clients</em> <a href="#rwcbook">[RWCBook]</a> by Mike Amundsen. This format is used to drive the server-side representor pattern. The <strong>WeSTL</strong> format exists in two different &#8216;states&#8217;. In its <strong>design-time</strong> state, it contains the list of all possible state transitions for a Web service. In its <strong>runtime</strong> state, it contains the list of the <em>selected</em> transitions for the current resource along with any data assocaited with that resource. The <strong>design-time</strong> document can be used to define all possible transitions including possible arugments for querying or writing data. The <strong>runtime</strong> document can be passed to a module that can turn the <strong>WeSTL</strong> document into a <em>representation</em> format (e.g. HTML, Collection+JSON, HAL, etc.).</p></div>
 <div class="sect2">
 <h3 id="_design_goals">Design Goals</h3>
-<div class="paragraph"><p>This format was designed to make it easier for service developers to focus on the state transition details of a Web service instead of the resource details. To that end, a minimal <code>WeSTL</code> document contains a list of possible state transitions.</p></div>
+<div class="paragraph"><p>This format was designed to make it easier for service developers to focus on the state transition details of a Web service instead of the resource details. To that end, a minimal <strong>WeSTL</strong> document contains a list of possible state transitions.</p></div>
 <div class="paragraph"><p>The <strong>design-time</strong> version of the document contains nothing more than a list of possible state transitions. Each transition contains meta-data about the transition including possible arguments to be used to executing queries or writing data. There is no indication of which <em>resource</em> to which these transitions belong. In fact, many of the transitions will occur on several resouces. For example the <code>home</code> transition (that leads to the home page of the service) might appear on <em>every</em> resource.</p></div>
-<div class="paragraph"><p>The <strong>runtime</strong> version of the document contains a filtered list of the state transitions&#8201;&#8212;&#8201;the ones that apply to the current resource request&#8201;&#8212;&#8201;along with a collection of data associated with that same resource request. In this case, the <code>WeSTL</code> document represents all the <em>applicable</em> state transitions for the current runtime context. Since this document has a standardized format, it can be populated and then passed to a module designed to convert the <code>WeSTL</code> document into a registered media type format such as HTML, HAL, Collection+JSON, etc.</p></div>
-<div class="paragraph"><p>Thus, there are two goals for the <code>WeSTL</code> format:</p></div>
+<div class="paragraph"><p>The <strong>runtime</strong> version of the document contains a filtered list of the state transitions&#8201;&#8212;&#8201;the ones that apply to the current resource request&#8201;&#8212;&#8201;along with a collection of data associated with that same resource request. In this case, the <strong>WeSTL</strong> document represents all the <em>applicable</em> state transitions for the current runtime context. Since this document has a standardized format, it can be populated and then passed to a module designed to convert the <strong>WeSTL</strong> document into a registered media type format such as HTML, HAL, Collection+JSON, etc.</p></div>
+<div class="paragraph"><p>Thus, there are two goals for the <strong>WeSTL</strong> format:</p></div>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -798,7 +814,7 @@ Provide a standard format for representor programmers to convert internal servic
 </div>
 <div class="sect2">
 <h3 id="_sample_document">Sample Document</h3>
-<div class="paragraph"><p>Below is a sample <code>WeSTL</code> document (in its <strong>runtime</strong> mode). It contains a list of all the _appropriate state transitions for a running Web service in a specific state.</p></div>
+<div class="paragraph"><p>Below is a sample <strong>WeSTL</strong> document (in its <strong>runtime</strong> mode). It contains a list of all the <em>appropriate</em> state transitions for a running Web service in a specific state.</p></div>
 <div class="listingblock">
 <div class="content">
 <pre><code>{
@@ -856,7 +872,11 @@ Provide a standard format for representor programmers to convert internal servic
   }
 }</code></pre>
 </div></div>
-<div class="paragraph"><p>See the <a href="#sample-documents">Sample WeSTL Documents</a> section for details on this and other <code>WeSTL</code> examples.</p></div>
+<div class="paragraph"><p>See the <a href="#sample-documents">Sample WeSTL Documents</a> section for details on this and other <strong>WeSTL</strong> examples.</p></div>
+</div>
+<div class="sect2">
+<h3 id="_updates">Updates</h3>
+<div class="paragraph"><p>There is an open source repository <a href="#repo">[REPO]</a> for this specification. Readers are encouraged to submit updates via the repository any time.</p></div>
 </div>
 <div class="sect2">
 <h3 id="_compliance">Compliance</h3>
@@ -874,18 +894,18 @@ Provide a standard format for representor programmers to convert internal servic
 </div>
 <div class="sect2">
 <h3 id="_media_type_identifier">Media Type Identifier</h3>
-<div class="paragraph"><p>The <code>WeSTL</code> document format is primarily designed to be used as an <em>internal</em> message model for aiding in the sharing of Web-like transition information and related data. However, it is possible to expose <code>WeSTL</code> documents directly on the Web.</p></div>
-<div class="paragraph"><p>For cases where the <code>WeSTL</code> document will be sent as a document over the WWW, the proper media type identifier string to use is:+application/prs.wstl+json+. This value SHOULD be used by the client application when requesting a <code>WeSTL</code> document and SHOULD be used by the server when responding with a <code>WeSTL</code> document.</p></div>
+<div class="paragraph"><p>The <strong>WeSTL</strong> document format is primarily designed to be used as an <em>internal</em> message model for aiding in the sharing of Web-like transition information and related data. However, it is possible to expose <strong>WeSTL</strong> documents directly on the Web.</p></div>
+<div class="paragraph"><p>For cases where the <strong>WeSTL</strong> document will be sent as a document over the WWW, the proper media type identifier string to use is: <code>application/prs.wstl+json</code>. This value SHOULD be used by the client application when requesting a <strong>WeSTL</strong> document and SHOULD be used by the server when responding with a <strong>WeSTL</strong> document.</p></div>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_the_code_westl_code_document_model">The <code>WeSTL</code> Document Model</h2>
+<h2 id="_the_westl_document_model">The WeSTL Document Model</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>The <code>WeSTL</code> document MUST be a valid JSON document per <a href="#RFC4627">[RFC4627]</a>. A <code>WeSTL</code> document has a very simple format. However, it is also easily extended to fit a local Web service implementor&#8217;s needs. Below is a top-down survey of the <code>WeSTL</code> document model.</p></div>
+<div class="paragraph"><p>The <strong>WeSTL</strong> document MUST be a valid JSON document per <a href="#RFC4627">[RFC4627]</a>. A <strong>WeSTL</strong> document has a very simple format. However, it is also easily extended to fit a local Web service implementor&#8217;s needs. Below is a top-down survey of the <strong>WeSTL</strong> document model.</p></div>
 <div class="sect2">
 <h3 id="_the_code_wstl_code_object">The <code>wstl</code> Object</h3>
-<div class="paragraph"><p>The <code>wstl</code> object is the root object of every <code>WeSTL</code> document. It has a small set of child properties and MAY be extended with custom properties.</p></div>
+<div class="paragraph"><p>The <code>wstl</code> object is the root object of every <strong>WeSTL</strong> document. It has a small set of child properties and MAY be extended with custom properties.</p></div>
 <div class="sect3">
 <h4 id="_quick_view">Quick View</h4>
 <div class="paragraph"><p>The <code>wstl</code> object looks like this:</p></div>
@@ -911,7 +931,7 @@ Provide a standard format for representor programmers to convert internal servic
 </dt>
 <dd>
 <p>
- The top-level element in every <code>WeSTL</code> document. This is a REQUIRED element.
+ The top-level element in every <strong>WeSTL</strong> document. This is a REQUIRED element.
 </p>
 </dd>
 <dt class="hdlist1">
@@ -1035,7 +1055,7 @@ Provide a standard format for representor programmers to convert internal servic
 </dt>
 <dd>
 <p>
-  Contains the URL associated with the transition. This value SHOULD only be populated in the <strong>runtime</strong> version of <code>WeSTL</code> documents but MAY be set at <strong>design-time</strong>. If populated, this value MUST comply with the rules of <a href="#rfc3986">[RFC3986]</a>
+  Contains the URL associated with the transition. This value SHOULD only be populated in the <strong>runtime</strong> version of <strong>WeSTL</strong> documents but MAY be set at <strong>design-time</strong>. If populated, this value MUST comply with the rules of <a href="#rfc3986">[RFC3986]</a>
 </p>
 </dd>
 <dt class="hdlist1">
@@ -1276,12 +1296,12 @@ Provide a standard format for representor programmers to convert internal servic
 </div>
 </div>
 <div class="sect1">
-<h2 id="sample-documents">Sample <code>WeSTL</code> Documents</h2>
+<h2 id="sample-documents">Sample WeSTL Documents</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>Below are sample <code>WeSTL</code> documents for reference.</p></div>
+<div class="paragraph"><p>Below are sample <strong>WeSTL</strong> documents for reference.</p></div>
 <div class="sect2">
-<h3 id="_a_design_time_code_westl_code_document">A Design-Time <code>WeSTL</code> Document</h3>
-<div class="paragraph"><p>Below is a <code>WeSTL</code> document in its <strong>design-time</strong> mode. It conatins a list of all the possible state transitions for a Web service offering a seach service.</p></div>
+<h3 id="_a_design_time_westl_document">A Design-Time WeSTL Document</h3>
+<div class="paragraph"><p>Below is a <strong>WeSTL</strong> document in its <strong>design-time</strong> mode. It conatins a list of all the possible state transitions for a Web service offering a seach service.</p></div>
 <div class="listingblock">
 <div class="content">
 <pre><code>{
@@ -1353,8 +1373,8 @@ The one that leads to the search results (<code>searchForm</code>)
 </ol></div>
 </div>
 <div class="sect2">
-<h3 id="_a_run_time_code_westl_code_document">A Run-Time <code>WeSTL</code> Document</h3>
-<div class="paragraph"><p>Below is a <code>WeSTL</code> document in its <strong>runtime</strong> mode. It conatins a list of all the _appropriate state transitions for a running Web service in a specific state. In this case, this document represents the state of the service once it has executed a search and is ready for the next inputs.</p></div>
+<h3 id="_a_run_time_westl_document">A Run-Time WeSTL Document</h3>
+<div class="paragraph"><p>Below is a <strong>WeSTL</strong> document in its <strong>runtime</strong> mode. It conatins a list of all the <em>appropriate</em> state transitions for a running Web service in a specific state. In this case, this document represents the state of the service once it has executed a search and is ready for the next inputs.</p></div>
 <div class="listingblock">
 <div class="content">
 <pre><code>{
@@ -1412,34 +1432,34 @@ The one that leads to the search results (<code>searchForm</code>)
   }
 }</code></pre>
 </div></div>
-<div class="paragraph"><p>Note the transition that represents the execute-able FORM contains the last search value (this is not a requirement, just a nice touch). Also note the <code>data</code> section that represents the data records found in the last search execution. Finally, you may notice that the <code>searchLink</code> transition is missing in this runtime instance of the <code>WeSTL</code> document. The service has apparently decided that there is no need for this link since the current resouce context includes an instance of the search form already.</p></div>
+<div class="paragraph"><p>Note the transition that represents the execute-able FORM contains the last search value (this is not a requirement, just a nice touch). Also note the <code>data</code> section that represents the data records found in the last search execution. Finally, you may notice that the <code>searchLink</code> transition is missing in this runtime instance of the <strong>WeSTL</strong> document. The service has apparently decided that there is no need for this link since the current resouce context includes an instance of the search form already.</p></div>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_extending_code_westl_code_documents">Extending <code>WeSTL</code> Documents</h2>
+<h2 id="_extending_westl_documents">Extending WeSTL Documents</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>Any <code>WeSTL</code> document can be extended in both the <strong>design-time</strong> and <strong>runtime</strong> modes. The only rules that MUST be followed are:</p></div>
+<div class="paragraph"><p>Any <strong>WeSTL</strong> document can be extended in both the <strong>design-time</strong> and <strong>runtime</strong> modes. The only rules that MUST be followed are:</p></div>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
-You MUST NOT remove any existing properties or objects listed in the <code>WeSTL</code> specification.
+You MUST NOT remove any existing properties or objects listed in the <strong>WeSTL</strong> specification.
 </p>
 </li>
 <li>
 <p>
-You MUST NOT change the meaning or use of any existing properties or objects listed in the <code>WeSTL</code> specification.
+You MUST NOT change the meaning or use of any existing properties or objects listed in the <strong>WeSTL</strong> specification.
 </p>
 </li>
 <li>
 <p>
-You MAY add new properties and objects as long as they do not cause existing compliant <code>WeSTL</code> document parsers to fail.
+You MAY add new properties and objects as long as they do not cause existing compliant <strong>WeSTL</strong> document parsers to fail.
 </p>
 </li>
 </ol></div>
 <div class="sect2">
 <h3 id="_enclosing_your_extensions">Enclosing Your Extensions</h3>
-<div class="paragraph"><p>You SHOULD add new features in <code>WeSTL</code> documents in a way that reduces the likelihood that future changes to the standard format as well as extensions from other document authors will cause a conflict with your extensions. Typically, this means using a unique name for an enclosing object to hold all your extensions.</p></div>
+<div class="paragraph"><p>You SHOULD add new features in <strong>WeSTL</strong> documents in a way that reduces the likelihood that future changes to the standard format as well as extensions from other document authors will cause a conflict with your extensions. Typically, this means using a unique name for an enclosing object to hold all your extensions.</p></div>
 <div class="paragraph"><p>For example, the following shows how to safely add the <code>rolloverText</code> extension by enclosing it in a unique identifying object named <code>"amundsen"</code>:</p></div>
 <div class="listingblock">
 <div class="content">
@@ -1456,7 +1476,7 @@ You MAY add new properties and objects as long as they do not cause existing com
     }
   },</code></pre>
 </div></div>
-<div class="paragraph"><p>This opens a wide set of possibilities for extending <code>WeSTL</code> documents.</p></div>
+<div class="paragraph"><p>This opens a wide set of possibilities for extending <strong>WeSTL</strong> documents.</p></div>
 </div>
 </div>
 </div>
@@ -1468,6 +1488,11 @@ You MAY add new properties and objects as long as they do not cause existing com
 <li>
 <p>
 <a id="rwcbook"></a> [RWCBook] Amundsen, M., "RESTful Web Clients", January 2017, <a href="http://g.mamund.com/rwcbook">http://g.mamund.com/rwcbook</a>
+</p>
+</li>
+<li>
+<p>
+<a id="repo"></a> [REPO] Github, "Web Service Transition Language", <a href="https://github.com/RWCBook/wstl-spec">https://github.com/RWCBook/wstl-spec</a>
 </p>
 </li>
 <li>
@@ -1518,7 +1543,7 @@ Iralki Nadareishvili.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-12-28 15:14:05 EST
+Last updated 2016-12-28 22:14:50 Eastern Standard Time
 </div>
 </div>
 </body>
