fixing wstl sample document to make it a valid json

--- a/index.html
+++ b/index.html
@@ -848,10 +848,10 @@ Provide a standard format for representor programmers to convert internal servic
             "name": "external",
             "prompt": "External Search?",
             "value": "",
-            "required: true,
+            "required": true,
             "suggest": [{"value":"true"},{"value":"false"}]
           }
-        }
+        ]
       }
     ],
     "data": [
@@ -867,7 +867,6 @@ Provide a standard format for representor programmers to convert internal servic
         "id": "azsxdcfvgb",
         "title": "Danny Two-Shoes"
       },
-
     ]
   }
 }</code></pre>
